# flux-resourceset

./: AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
data/: seed.json
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  architecture.md  cli-usage.md  configuration.md  dynamic-patching.md  extending.md  faq.md  input-providers.md  introduction.md  local-demo.md  merge-logic.md  multi-cluster.md  phone-home.md  resource-driven-development.md  resourceset-templates.md  security.md  versioning.md
hack/: kind-config.yaml
k8s/base/: api-token-secret.yaml  cluster-identity.yaml  flux-instance.yaml  kustomization.yaml
k8s/demo/: api-crud-deployment.yaml  api-db-pvc.yaml  api-readonly-deployment.yaml  api-readonly-service.yaml  api-service.yaml  kustomization.yaml
k8s/providers/: kustomization.yaml  namespaces.yaml  platform-components.yaml  rolebindings.yaml
k8s/resourcesets/: namespaces.yaml  platform-components.yaml  rolebindings.yaml
openapi/: openapi-gen-config.json  openapi.yaml
resources/: cluster.yaml  namespace.yaml  platform_component.yaml  rolebinding.yaml
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  merge.rs  sqlite_store.rs
src/apis/: clusters_api.rs  configuration.rs  mod.rs  namespaces_api.rs  platform_components_api.rs  rolebindings_api.rs
src/domain/: cluster.rs  component.rs  mod.rs
src/handlers/: clusters.rs  crud.rs  mod.rs  namespaces.rs  platform_components.rs  rolebindings.rs
src/models/: cluster.rs  (+15 more)
tests/: crud_integration.rs  integration.rs
