[package]
name = "flux-resourceset"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = { version = "3.8", default-features = false, features = ["base64", "std", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tower = "0.5"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.13"
